# django-reference-implementation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  LICENSE.txt  Makefile  Makefile.sample  Procfile  README.md  app.json  db.sqlite3  docker-compose.example.yml  docker-compose.yml  entrypoint.sh  env.sample  env.test  gunicorn_settings.py  procfile-release.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: copywriter_subagent.md  coverage_subagent.md  guilfoyle_subagent.md
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  ruff.yml  test.yml
docs/: async_tasks.md  getting_started.md  manifesto.md
src/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/dataroom/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
src/dataroom/migrations/: 0001_initial.py  0002_bulkdownload.py
src/dataroom/templates/dataroom/: upload_archived.html  upload_disabled.html  upload_page.html
src/myapp/: __init__.py  admin.py  apps.py  context_processors.py  middleware.py  models.py  views.py
src/myapp/admin/: __init__.py  site_configuation.py  worker_configurations.py  worker_errors.py
src/myapp/management/: __init__.py
src/myapp/management/commands/: __init__.py  _base.py  healthcheck_push.py  send_email_confirmation.py  simple_async_worker.py  test_sentry_exception.py
src/myapp/migrations/: 0001_initial.py  0002_siteconfiguration_worker_enabled_and_more.py  0003_siteconfiguration_js_body_siteconfiguration_js_head.py  0004_alter_siteconfiguration_js_body_and_more.py  0005_workerconfiguration_workererror.py  0006_alter_siteconfiguration_js_body_and_more.py  0007_siteconfiguration_required_2fa.py  0008_siteconfiguration_include_staff_in_analytics_and_more.py  0009_remove_required_2fa_field.py
src/myapp/models/: __init__.py  worker_configurations.py  worker_errors.py
src/myapp/templates/: _alerts.html  _footer.html  _header.html  base.html  home.html
src/myapp/templates/account/: profile.html
src/myapp/templates/myapp/: home.html
src/myapp/templatetags/: __init__.py  thumbnail_url.py
src/myapp/tests/: test_2fa_middleware.py  test_views.py
src/myapp/views/: __init__.py  profile.py
src/organizations/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
src/organizations/docs/: README.md  invitation_log.md  invitations.md  members.md  organizations.md
src/organizations/management/: __init__.py
src/organizations/management/commands/: send_email_invite.py
src/organizations/migrations/: 0001_initial.py  0002_invitation.py  0003_alter_invitation_invite_key.py  0004_alter_invitation_organization.py  0005_invitation_email_sent.py  0006_alter_invitation_user_invitationlog.py
src/organizations/templates/organizations/: _breadcrumb.html  accept_invite.html  accept_invite_change_password.html  base.html  create.html  decline_invite.html  decline_invite_success.html  delete_organization.html  detail.html  index.html  invite.html  invite_logs.html
src/organizations/templatetags/: __init__.py  organization_extras.py
src/organizations/tests/: test_forms.py  test_invitation_model.py  test_invitations.py  test_views.py
src/organizations/tests/views/: __init__.py  members.py  organizations.py  test_members.py  test_organizations.py
src/organizations/views/: __init__.py  members.py  organizations.py
src/require2fa/: README.md  __init__.py  admin.py  apps.py  middleware.py  models.py
src/require2fa/migrations/: 0001_initial.py  0002_copy_2fa_setting.py
src/require2fa/tests/: __init__.py  test_middleware.py
src/static/: site.js
src/templates/: privacy.html  terms.html
src/templates/allauth/elements/: alert.html  badge.html  button.html  button__entrance.html  button_group.html  field.html  form.html  form__entrance.html  h1__entrance.html  h2__entrance.html  panel.html  provider.html  table.html
src/templates/allauth/layouts/: base.html  entrance.html  manage.html
src/templates/mfa/: index.html
src/templates/socialaccount/: login.html
