[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django_reference_implementation"
authors = [{name = "SimpleCTO", email = "github+django_reference_implementation@simplecto.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
description = "Django Reference Implementation, a boilerplate Django project."
version = "0.1.4"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.1",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "django-environ==0.12.0",
    "Django==5.2.5",
    "django-allauth[mfa]==65.10.0",
    "django-bootstrap5==25.2",
    "django-solo==2.4.0",
    "gunicorn==23.0.0",
    "idna==3.10",
    "packaging==25.0",
    "psycopg2-binary==2.9.10",
    "pytz==2025.2",
    "requests==2.32.4",
    "sqlparse==0.5.3",
    "typing_extensions==4.14.1",
    "urllib3==2.5.0",
    "whitenoise==6.9.0",
    "PyJWT==2.10.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.8",
    "pre-commit==4.3.0",
    "commitizen>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.urls]
Home = "https://github.com/simplecto/django-reference-implementation"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "pyproject.toml",
    "src/**/tests/*",
    "src/**/migrations/*",
    ".idea/**",
    "src/manage.py",
]

[tool.ruff.lint]

ignore = [
    "E501",
    "D203",
    "D213",
    "D100",
    "COM812",
    "RUF012",
]
select = ["ALL", "W2", "I"]
exclude = [
    "pyproject.toml",
    "src/**/tests/**",
    "src/**/migrations/**",
    ".idea",
    "src/manage.py",
]

[tool.bandit]
exclude = ["src/**/tests/**", "src/**/migrations/*"]
skips = ["B106"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.4"
tag_format = "v$version"
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
version_files = [
    "pyproject.toml:version",
    "Dockerfile:VERSION",
]
