[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django_reference_implementation"
authors = [{name = "SimpleCTO", email = "github+django_reference_implementation@simplecto.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
description = "Django Reference Implementation, a boilerplate Django project."
version = "0.1.4"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.4",
    "django-environ==0.12.0",
    "Django==5.2.5",
    "django-bootstrap5==25.2",
    "django-solo==2.5.1",
    "gunicorn==23.0.0",
    "idna==3.11",
    "packaging==25.0",
    "psycopg2-binary==2.9.11",
    "pytz==2025.2",
    "requests==2.32.5",
    "sqlparse==0.5.5",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
    "whitenoise==6.11.0",
    "PyJWT==2.10.1",
    "django-allauth[mfa,socialaccount]",
    "django-allauth-require2fa",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.13",
    "pre-commit==4.5.1",
    "commitizen>=3.0.0",
    "bandit==1.9.3",
    "radon==6.0.1",
    "vulture==2.14",
    "mypy==1.19.1",
    "django-stubs[compatible-mypy]==5.2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.urls]
Home = "https://github.com/simplecto/django-reference-implementation"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "pyproject.toml",
    "src/**/tests/*",
    "src/**/migrations/*",
    ".idea/**",
    "src/manage.py",
]

[tool.ruff.lint]

ignore = [
    "E501",
    "D203",
    "D213",
    "D100",
    "COM812",
    "RUF012", # mutable class attributes (too pedantic for Django models)
]
select = ["ALL", "W2", "I"]
exclude = [
    "pyproject.toml",
    "src/**/tests/**",
    "src/**/migrations/**",
    ".idea",
    "src/manage.py",
]

[tool.bandit]
exclude = ["src/**/tests/**", "src/**/migrations/*"]
skips = ["B106"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
exclude = [
    ".*/migrations/.*",
    ".*/tests/.*",
    "manage.py",
]
# Suppress some Django-related errors for cleaner output
disable_error_code = ["import-untyped", "var-annotated"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.4"
tag_format = "v$version"
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
version_files = [
    "pyproject.toml:version",
    "Dockerfile:VERSION",
]

[tool.uv.sources]
django-allauth = { git = "https://github.com/heysamtexas/django-allauth.git", rev = "heysamtexas-patches" }
